# ccalculator

./: CMakeLists.txt  README.md  vcpkg.json
include/: error.h  expression.h  input.h  operations.h  types.h  variable.h
src/: error.c  expression.c  helpers.c  helpers.h  input.c  main.c  operations.c  variable.c
tests/: CMakeLists.txt  error.cpp  expression.cpp  input.cpp  operations.cpp  variable.cpp
